# Agora

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  start.sh  synth-istio-v1.json  synth-output-v2-pretty.json  synth-output-v2.json
api/: cache.py  config.py  cors.py  db.py  llm.py  main.py  pdf.py  routes_runs.py  schemas.py
benchmarks/: judge.py  questions.yaml  run_eval.py
benchmarks/reports/20260425-135045/: report.json  report.md
docs/runs/: Agora_first_success_run.txt  synth-istio-v1-pretty.json  synth-output-first-clean-run.json
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/runs/[id]/: page.tsx
frontend/lib/: api.ts
migrations/: env.py
migrations/versions/: 04a574e6eebd_add_synthesizer_enqueued_at_to_runs.py  49e5177da2d6_initial_schema.py  9d5648b8b66e_add_expected_researchers_to_runs.py  b88e96bace69_add_llm_cache_table.py
scripts/: enqueue_researcher.py  reap_stuck_runs.py
worker/: fan_in.py  main.py  planner.py  researcher.py  synthesizer.py  tools.py
