[project]
name = "agora"
version = "0.1.0"
description = "Distributed multi-agent research platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "arq>=0.26",
    "redis>=5.2",
    "httpx>=0.28",
    "structlog>=24.4",
    "google-genai>=1.73.1",
    "instructor>=1.15.1",
    "tenacity>=9.1.4",
    "jsonref>=1.1.0",
    "openai>=2.32.0",
    "trafilatura>=2.0.0",
    "weasyprint>=68.1",
    "reportlab>=4.4.10",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py311"
